angular-ui.ui-sortable 추가

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -88,6 +88,8 @@
 <script src="bower_components/ngstorage/ngStorage.js"></script>
 <script src="bower_components/jsrsasign/jsrsasign-latest-all-min.js"></script>
 <script src="bower_components/oauth-ng/dist/oauth-ng.js"></script>
+<script src="bower_components/jquery-ui/jquery-ui.js"></script>
+<script src="bower_components/angular-ui-sortable/sortable.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
